--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.1.3
-torch==2.3.1
-torchvision==0.18.1
-Pillow==9.5.0
+Flask==2.3.3
+Werkzeug==2.3.7
+torch==2.0.1
+torchvision==0.15.2
+Pillow==10.0.0
 gunicorn==20.1.0
