--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.3.3
+torch==2.4.1
+torchvision==0.19.1
+Pillow==10.4.0
+flask==3.0.3
+flask-cors==5.0.0
 Werkzeug==2.3.7
-torch==2.0.1
-torchvision==0.15.2
-Pillow==10.0.0
 gunicorn==20.1.0
 numpy<2.0
