--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch==2.4.1
-torchvision==0.19.1
-Pillow==10.4.0
-flask==3.0.3
-flask-cors==5.0.0
-Werkzeug==2.3.7
-gunicorn==20.1.0
-numpy<2.0
+torch>=2.6.0
+torchvision>=0.21.0
+Pillow>=10.4.0
+flask>=3.0.3
+flask-cors>=5.0.0
+Werkzeug>=2.3.7
+gunicorn>=20.1.0
+numpy>=1.21.0,<2.0
