--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 torch>=2.6.0
 torchvision>=0.21.0
 Pillow>=10.4.0
-flask>=3.0.3
-flask-cors>=5.0.0
-Werkzeug>=2.3.7
-gunicorn>=20.1.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
 numpy>=1.21.0,<2.0
